--- a/app/views/artists/_artist_favorite.html.erb
+++ b/app/views/artists/_artist_favorite.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <% if artist_comment.artist_favorite_user(current_user.id) %>
+  <% if artist_comment.artist_favorite_user(current_user) %>
     <%= button_to artist_comment_artist_favorite_path(artist_comment.id), method: :delete, remote: true do %>
       <%= image_tag("heart.png",:size =>'10x10') %>
       <span>
