--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     </head>
     <header>
         <nav class="mains_index_header clearfix">
-          <a href="/mains"><img src='/assets/e-con.gif'alt=" " class="header_logo"></a>
+          <a href="/mains"><img src='/images/e-con.gif'alt=" " class="header_logo"></a>
             <div class="mains_index_header_item">
               <%= link_to " イベント一覧", events_path,:style=>"color: white; text-decoration:none; font-size:14px" %>
             </div>
