--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,8 +1,8 @@
 <div class="main_index_image">
 		<script type="text/javascript">
    			var imglist = new Array(
-      		'kari.jpg',
-      		'kari4.jpg',
+      		'/images/kari.jpg',
+      		'/images/kari4.jpg',
       		);
    			var selectnum = Math.floor(Math.random() * imglist.length);
    			var output = "<img src=/assets/" + imglist[selectnum] + ">";
