--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -5,7 +5,7 @@
       		'/images/kari4.jpg',
       		);
    			var selectnum = Math.floor(Math.random() * imglist.length);
-   			var output = "<img src=/assets/" + imglist[selectnum] + ">";
+   			var output = "<img src=/images/" + imglist[selectnum] + ">";
 	   		document. write(output);
 		</script>
 </div>
