--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,7 +51,7 @@ header {
   background-color: black;
 }
   body {
-    background-image: url("haikei2.jpeg");
+    background-image: url("/images/haikei2.jpeg");
 font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   }
 #slide_menu{
@@ -115,7 +115,7 @@ dl.searchbox dd{
   width: 100%;
   height: 600px;
 
-  background-image:url("E-Connect.png");
+  background-image:url("/images/E-Connect.png");
   background-size: cover;
 }
 .sign-in{
