--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -1,3 +1,22 @@
-<% @search_artists.each do |artist| %>
-  〜略〜
-<% end %>
+<div class="check">
+	<h1>About </h1>
+
+	<h3>本アプリケーションは投稿型SNSアプリケーションです。以下の機能を拡張しております。<br>主な機能一覧</h3>
+
+
+	<h4>[投稿機能]</h4>
+	<h5>・イベント・アーティスト投稿機能<br>
+	イベントやアーティストについて投稿ができます、語り合いましょう</h5>
+	<h4>[検索機能]</h4>
+	<h5>・アーティスト検索機能<br>・あなたの好きなアーティストを検索してみましょう、見つからなかった場合あなたが最初の投稿をしてみましょう</h5>
+	<h4>DM機能</h4>
+	<h5>気になる人がいたらメッセージを送ってみましょう</h5>
+	<h4>コメント機能</h4>
+	<h5>投稿されたイベントやアーティストについてコメントを残すことができます。</h5>
+	またその際に点数を入力することも可能です。</h5>
+	<h4>[いいね機能]</h4>
+	<h5>・投稿についているコメントにいいねを押すことができます。</h5>
+	<h5>・グレーハートをクリックするとレッドハートになり数値が+1されます。いいねは１つの投稿に対して１つしかできません。</h5>
+	<h5>・レッドハートは「いいね」済のため、サイドクリックすることでグレーハートになり数値が-1されます。</h5>
+
+</div>
