--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,8 @@
                       <li><%= link_to "マイページ", user_path(current_user.id),:style=>"color: white; text-decoration:none; font-size:14px" %></li>
                       <li><%= link_to "新規イベント", new_event_path,:style=>"color: white; text-decoration:none; font-size:14px" %></li>
                       <li><%= link_to "新規アーティスト", new_artist_path,:style=>"color: white; text-decoration:none; font-size:14px" %></li>
+                      <li><%= link_to "はじめに", check_index_path,:style=>"color: white; text-decoration:none; font-size:14px" %></li>
+                      
 
                   </ol>
               </nav>
