--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,5 +1,5 @@
-<div class="main_index_image">
-		<script type="text/javascript">
+<div class="main_image">
+<!-- 		<script type="text/javascript">
    			var imglist = new Array(
       		'/images/kari.jpg',
       		'/images/kari4.jpg',
@@ -7,7 +7,7 @@
    			var selectnum = Math.floor(Math.random() * imglist.length);
    			var output = "<img src=/images/" + imglist[selectnum] + ">";
 	   		document. write(output);
-		</script>
+		</script> -->
 </div>
 
 <h1 class="main_name">New event</h1>
