--- a/app/assets/stylesheets/check.scss
+++ b/app/assets/stylesheets/check.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the check controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.check{
+	width: 80%;
+	margin:0 auto;
+	text-align: left;
+}
+h1{
+	text-align: center;
+}
